# tiso-os

./: .dockerignore  .env.example  .gitignore  Cargo.toml  askama.toml  build.rs  docker-compose.yaml  nginx.conf  package-lock.json  package.json  readme.md  safelist.txt  sailfish.toml  tailwind.css
.cargo/: config.toml.example
assets/flappybird/: flappybird.js
assets/js/: calculator.js  clock.js  context_menu.js  display_setting.js  drag.js  explorer.js  flappy.js  global_event.js  global_func.js  global_vars.js  grid.js  main.js  message_box.js  music.js  resize.js  resume.js  right_click.js  screen.js  snake.js  taskbar.js  terminal.js  txt.js  web_builder.js
assets/snake/: snake.js  snake.wasm
games/flappy-bevy/: Cargo.toml  README.md  win.sh
games/flappy-bevy/src/: components.rs  lib.rs  main.rs  plugin.rs  resource.rs  setup.rs  systems.rs  utils.rs
games/roguelike/: Cargo.toml
games/snake/: Cargo.toml  README.md  index.html
infra/dev/: .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh
infra/nginx/: Dockerfile
infra/prod/: .env.example  Dockerfile  docker-compose.yaml
src/: lib.rs  main.rs  router.rs
src/constant/: mod.rs  web_builder.rs
src/contanst/: mod.example.rs  mod.rs
src/controllers/: account_c.rs  calculator_c.rs  display_setting_c.rs  explorer_c.rs  file_c.rs  flappy_bird_c.rs  folder_c.rs  mod.rs  music_c.rs  resume_c.rs  screen_c.rs  snake_c.rs  taskbar_c.rs  terminal_c.rs  txt_c.rs  web_builder_c.rs
src/middlewares/: auth_mw.rs  csrf_mw.rs  log_mw.rs  mod.rs  session_mw.rs
src/models/: calculator_db.rs  desktop.rs  display_setting_db.rs  display_settings_db.rs  error.rs  file_db.rs  files_db.rs  folder_db.rs  folder_item.rs  folders_db.rs  mod.rs  settings_db.rs  state.rs  txt_db.rs  txt_window.rs  user_db.rs  users_db.rs  web_builder_db.rs  web_builder_window.rs
src/templates/: calculator_file.stpl  calculator_window.stpl  confirm_password.stpl  display_setting_window.stpl  explorer_window.stpl  flappy_bird_file.stpl  flappy_bird_window.stpl  folder.stpl  folder_input.stpl  main_screen.stpl  music_file.stpl  music_player_window.stpl  resume_file.stpl  resume_window.stpl  screen_background.stpl  screen_grid.stpl  screen_section.stpl  snake_file.stpl  snake_window.stpl  taskbar.stpl  taskbar_menu_files.stpl  terminal_file.stpl  terminal_help.stpl  terminal_ls.stpl  terminal_window.stpl  thispc_file.stpl  txt_file.stpl  txt_input.stpl  txt_window.stpl  web_builder_edit.stpl  web_builder_edit_node.stpl  web_builder_file.stpl  web_builder_node.stpl  web_builder_review.stpl  web_builder_section_dialog.stpl  web_builder_select_contact.stpl  web_builder_select_footer.stpl  web_builder_select_header.stpl  web_builder_select_hero.stpl  web_builder_select_section.stpl  (+33 more)
src/utilities/: argon.rs  common.rs  config.rs  db.rs  general.rs  migration.rs  mod.rs  postgres.rs  screen_utils.rs  terminal_cd.rs  terminal_ls.rs  terminal_mkdir.rs  terminal_rm.rs  terminal_u.rs  tracing.rs  user_utils.rs  web_builder_u.rs
src/views/: calculator.rs  calculator_v.rs  calculator_v_2.rs  display_setting_v.rs  display_setting_v_2.rs  explorer_v.rs  flappy_bird_v.rs  folder_v.rs  folder_v_2.rs  mod.rs  music_v.rs  resume_v.rs  screen_v.rs  screen_v_2.rs  snake_v.rs  taskbar_v.rs  taskbar_v_2.rs  terminal_v.rs  thispc_v.rs  thispc_v_2.rs  txt_v.rs  txt_v_2.rs  web_builder_v.rs  web_builder_v_2.rs
templates/calculator/: calculator_file.html  calculator_window.html
templates/display_setting/: display_setting_window.html
templates/explorer/: explorer_window.html
templates/flappybird/: flappy_bird_file.html  flappy_bird_window.html
templates/folder/: folder.html  folder_input.html
templates/music/: music_file.html  music_player_window.html
templates/screen/: confirm_password.html  main_screen.html  screen_background.html  screen_grid.html  screen_section.html  welcome_screen.html
templates/snake/: snake_file.html  snake_window.html
templates/taskbar/: taskbar.html  taskbar_menu_files.html
templates/thispc/: thispc_file.html
(+72 files in other folders)
