[package]
name = "tiso-os"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
base64 = "0.22.1"
deadpool-postgres = "0.14.1"
hypertext = { version = "0.12.1", features = ["axum", "htmx"] }
memory-serve = { version = "1.2.2" }
papaya = "0.2.3"
postgres-types = { version = "0.2.11", features = ["derive"] }
rand = { version = "0.9.2", features = ["thread_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1", "with-time-0_3"] }
tower-http = { version = "0.6.6", features = [
  "compression-zstd",
  "fs",
  "set-header",
  "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
dotenvy = "0.15"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = 'abort'
codegen-units = 1
