[package]
name = "tiso-os"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
base64 = "0.22.1"
csscolorparser = "0.8.1"
deadpool-postgres = "0.14.1"
ego-tree = "0.10.0"
memory-serve = { version = "1.2.2" }
papaya = "0.2.3"
postgres-types = { version = "0.2.11", features = ["derive"] }
rand = { version = "0.9.2", features = ["thread_rng"] }
regex = "1.12.2"
sailfish = "0.10.0"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1", "with-time-0_3"] }
tower-http = { version = "0.6.7", features = [
  "compression-zstd",
  "fs",
  "set-header",
  "trace",
] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["fast-rng", "v4"] }
zip = "6.0.0"

[build-dependencies]
dotenvy = "0.15"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = 'abort'
codegen-units = 1
